# sandbox

./: .gitignore  .goreleaser.yaml  .remote-dev.env.example  AGENTS.md  CHANGELOG.md  README.md  TRUST.md  go.mod  go.sum  main.go  release-please-config.json
.github/workflows/: release-please.yml  release.yml
adapters/: README.md  c-core.yaml  esp-idf.yaml
cmd/honch/: main.go  main_test.go
config/: default.yaml
harnesses/c-core/: CMakeLists.txt  app.c  app.h  main.c  sandbox_control.c  sandbox_control.h  sandbox_json.c  sandbox_json.h  sandbox_json_test.c
harnesses/esp-idf/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
harnesses/esp-idf/main/: CMakeLists.txt  app.c  app.h  app_main.c  idf_component.yml  sandbox_control.c  sandbox_control.h  sandbox_network.c  sandbox_network.h
internal/adapter/: adapter.go  adapter_test.go
internal/cli/: cli.go  cli_test.go
internal/commands/: adapters.go  adapters_test.go  config.go  control.go  control_commands.go  doctor.go  events.go  events_test.go  flags.go  help.go  images.go  install.go  lifecycle_commands.go  logs.go  logs_test.go  onboarding.go  onboarding_repos.go  onboarding_setup.go  onboarding_state.go  process.go  process_test.go  process_utils.go  proxy_command.go  proxy_command_test.go  proxy_process.go  qemu.go  root.go  root_test.go  run.go  run_test.go  run_viewer.go  run_viewer_test.go  runner_lifecycle.go  runner_lifecycle_test.go  runner_process.go  runtime.go  sandbox_processes.go  scenario.go  scenario_test.go  setup.go  (+1 more)
internal/config/: config.go  config_test.go
internal/events/: events.go  events_test.go
internal/health/: health.go  health_test.go
internal/proxy/: proxy.go  proxy_test.go
internal/runner/: runner.go  runner_test.go
internal/scenario/: scenario.go  scenario_test.go
internal/session/: session.go  session_test.go
internal/stack/: background.go  commands.go  migrations.go  repos.go  seed_test.go  stack.go  stack_test.go
scripts/: install.sh  remote-dev  remote-dev-test.sh
(+61 files in other folders)
